maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:53: error: not found: value tree
    tree=false
    ^