maze.pledge.PledgeMaze.scala.code
override def run() {
  var virage:Double = 0
 	while (!estFaceMur())
  	avance()
  while (!estSurBiscuit())
  	if (getDirection()==Direction.NORTH) {
  		while (!estFaceMur())
      	avance()
    }
    else {
  		while (virage!=0 && !isDirectionFree())
  			virage = keepHandOnSideWall(virage)
    }
  prendBiscuit()
}

def keepHandOnSideWall(virage:Double):Double = {
  droite()
  var v:Double = 0
  if (estFaceMur()) {
  	gauche()
    if (estFaceMur()) {
    	gauche()
    	v=virage+1
    }
    else
    	avance()
  }
  else {
  	avance()
  	v=virage-1
  }
  return v
}

def isDirectionFree():Boolean = {
  var d = 0
  var free = true
  if (getDirection()==Direction.SOUTH) {
  	retourne()
    d=1
  }
  if (getDirection()==Direction.EAST) {
  	gauche()
    d=2
  }  
  if (getDirection()==Direction.WEST) {
  	droite()
  	d=3
  }
  if (estFaceMur())
  	tree=false
  if (d==1)
  	retourne()
  if (d==2)
  	droite()
  if (d==3)
  	gauche()
  return free
}